# branching-bad

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
analyst/: index.html  package-lock.json  package.json  vite.config.ts
docs/: featurerequests.md  quickstart.md
screenshots/: demo-movie.mov
scripts/: pg-testdb-setup.sql
server-rs/: Cargo.toml
server-rs/migrations/: V4__add_default_branch.sql
server-rs/src/: db.rs  discovery.rs  errors.rs  executor.rs  jira.rs  main.rs  models.rs  msg_store.rs  planner.rs  process_manager.rs  provider.rs  sentry.rs
server-rs/src/db/: agents.rs  autostart.rs  chat.rs  es_investigations.rs  investigations.rs  maintenance.rs  mod.rs  plan_jobs.rs  plans.rs  providers.rs  repos.rs  reviews.rs  rules.rs  runs.rs  sonar_scans.rs  tasks.rs
server-rs/src/provider/: mod.rs  routes.rs  utils.rs
server-rs/src/provider/cloudwatch/: aws_client.rs  investigator.rs  mod.rs  provider.rs  routes.rs
server-rs/src/provider/elasticsearch/: es_client.rs  investigator.rs  mod.rs  provider.rs  routes.rs
server-rs/src/provider/jira/: client.rs  mod.rs  models.rs  provider.rs
server-rs/src/provider/postgres/: client.rs  mod.rs  provider.rs
server-rs/src/provider/sentry/: client.rs  mod.rs  models.rs  provider.rs
server-rs/src/provider/sonarqube/: client.rs  docker.rs  mod.rs  provider.rs  routes.rs
server-rs/src/providers/: jira.rs  mod.rs  sentry.rs
server-rs/src/routes/: agents.rs  autostart.rs  chat.rs  fs.rs  health.rs  mod.rs  plans.rs  repos.rs  reviews.rs  rules.rs  runs.rs  shared.rs  tasks.rs
(+403 files in other folders)
