[package]
name = "approval-agent-server"
version = "0.1.0"
edition = "2021"
default-run = "approval-agent-server"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "ws"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
refinery = { version = "0.9", features = ["rusqlite"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "process", "time", "sync", "io-util"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors"] }
command-group = { version = "5.0", features = ["with-tokio"] }
nix = { version = "0.29", features = ["signal", "process"] }
futures = "0.3"
uuid = { version = "1.8", features = ["v4", "serde"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
walkdir = "2.5"
which = "6.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[[bin]]
name = "approval-agent-server"
path = "src/main.rs"

